# LLVM-VectorisationHintPass

./: CMakeLists.txt  MyPass.cpp  README.md  matxAdd2D.cpp  matxAdd2D_canonical.ll  matxAdd2D_plain.s  matxAdd2D_raw.ll  matxAdd2D_vectorized.ll  matxAdd2D_vectorized.s  test.ll
